--- a/recipe-book/src/components/Home.css
+++ b/recipe-book/src/components/Home.css
@@ -17,9 +17,10 @@ h2 {
 div {
   font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
   text-align: left;
-  margin-left: 0px;
   display: block;
   position: static;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 img {
@@ -31,6 +32,20 @@ img {
   align-items: center;
 }
 
+html, body {
+    height: 100%;
+}
+
+html {
+    display: table;
+    margin: auto;
+}
+
+body {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 .Home .row {
   display: flex;
 }
@@ -40,14 +55,28 @@ img {
   flex: 100%;
 }
 
+/* Add a recipe*/
+input[type=submit] {
+    font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
+    font-size: 15px;
+    background:#249986;
+    border:0 none;
+    margin-left: 30px;
+    margin-top: 30px;
+    padding: 11px 28px;
+    font-weight: lighter;
+    color: white;
+}
+
 .Home a {
+  align-content: center;
+  align-items: center;
+  align-self: center;
   margin-left: 0px;
-  display: flexbox;
   flex: 100%;
   padding: 10px 40px;
   text-align: center;
   text-decoration: none;
-  position: absolute;
 }
 
 .Home a:link,
@@ -58,5 +87,5 @@ img {
 
 .Home a:hover,
 .Home a:active {
-  background-color: rgb(0, 195, 255);
+  background-color: 'cyan';
 }
