--- a/b0ceffb5d04e1c23a1851c29d659fe691bb49a88/src/components/Home.css
+++ b/b0ceffb5d04e1c23a1851c29d659fe691bb49a88/src/components/Home.css
@@ -17,10 +17,9 @@ h2 {
 div {
   font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
   text-align: left;
+  margin-left: 0px;
   display: block;
   position: static;
-  padding-bottom: 10px;
-  padding-top: 10px;
 }
 
 img {
@@ -32,20 +31,6 @@ img {
   align-items: center;
 }
 
-html, body {
-    height: 100%;
-}
-
-html {
-    display: table;
-    margin: auto;
-}
-
-body {
-    display: table-cell;
-    vertical-align: middle;
-}
-
 .Home .row {
   display: flex;
 }
@@ -55,28 +40,14 @@ body {
   flex: 100%;
 }
 
-/* Add a recipe*/
-input[type=submit] {
-    font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
-    font-size: 15px;
-    background:#249986;
-    border:0 none;
-    margin-left: 30px;
-    margin-top: 30px;
-    padding: 11px 28px;
-    font-weight: lighter;
-    color: white;
-}
-
 .Home a {
-  align-content: center;
-  align-items: center;
-  align-self: center;
   margin-left: 0px;
+  display: flexbox;
   flex: 100%;
   padding: 10px 40px;
   text-align: center;
   text-decoration: none;
+  position: absolute;
 }
 
 .Home a:link,
@@ -87,5 +58,5 @@ input[type=submit] {
 
 .Home a:hover,
 .Home a:active {
-  background-color: 'cyan';
+  background-color: rgb(0, 195, 255);
 }
