Changed favicon, page name and added remarks and intro
This reverts commit 9f5b159b586e5e7eb27254e492a4a525d58795f1.

--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -14,6 +14,13 @@ h2 {
   position: static;
 }
 
+p {
+  font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
+  text-align: center;
+  display: flexbox;
+  position: static;
+}
+
 div {
   font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
   text-align: left;
