--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -29,6 +29,20 @@ div {
   position: static;
 }
 
+p {
+  font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
+  text-align: center;
+  margin-left: 0px;
+  display: block;
+  position: static;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .Recipe .row {
   display: flex;
 }
