--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,13 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  font-family: 'Arial';
+}
+
+h2 {
+  text-align: center;
+  font-family: 'Arial';
+  color: #a57b6f;
+}
